--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
@@ -10,7 +10,7 @@
       </ion-col>
       <ion-col size="2">
         <ion-row>
-          <app-muscle-groups  height="100%" width="100%" (newMuscleList)="addMuscles($event)" [muscles]="activity.muscleGroups" ></app-muscle-groups>
+          <app-muscle-groups (newMuscleList)="addMuscles($event)" [muscles]="activity.muscleGroups" ></app-muscle-groups>
           <!-- <ion-select  [multiple]="true" [(ngModel)]="activity.muscleGroups">
             Muscle Groups
             <div *ngFor="let muscle of muscleList">
