--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -47,7 +47,7 @@
               <ion-row class="cardHeader">
                 <div class="cardHeader label">Muscle Groups</div>
               </ion-row>
-              <app-muscle-groups  height="100%" width="80%"  [muscles]="muscleGroups" ></app-muscle-groups>
+              <app-muscle-groups [canSelect]="false" [muscles]="muscleGroups" ></app-muscle-groups>
              
             </ion-col>
           </ion-row>
@@ -61,7 +61,10 @@
 
   </ion-list>
 
+  <!-- using the svg angular combo here -->
+  <app-muscle-groups [canOpen]="false" [muscles]="['chest']" (newMuscleList)="muscleSelected($event)" ></app-muscle-groups>
 </ion-content>
+
 <ion-footer>
   <ion-button expand="block" class="addExcercise" fill="outline" (click)="addNewComponent()">Add
     Excercise
