--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.scss
@@ -3,13 +3,36 @@ ion-select{
     text-align-last: center;
 }
 
-ion-text{
+ion-icon{
+    color: #fff;
+}
+
+.date-selection{
+    width: 400px;
+    text-align-last: center;
+}
+
+.left-table-text{
+    padding-left: 10px;
+    text-align: left;
+}
+
+.right-table-text{
+    padding-right: 10px;
+    text-align: right;
+}
+
+.weight-text{
     text-align: center;
 }
 
-ion-buttons{
-    width: 400px;
-    text-align-last: center;
+.table-title-color{
+    background-color: #833535;
+}
+
+.right{
+    width: 250px;
+    text-align-last: right;
 }
 
 
