--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
@@ -64,39 +64,19 @@
 
   <!-- add ngfor loop here to generate data -->
   <ion-grid style="border-bottom: 2px solid grey">
-    <ion-row>
+    <ion-row *ngFor="let row of workoutDates; let i = index">
       <ion-buttons>
         <ion-col class="left-table-text" size="auto">
-          <ion-text>{{workoutDates[0]}}</ion-text>
+          <ion-text>{{workoutDates[i]}}</ion-text>
         </ion-col>
 
         <ion-col class="weight-text">
-          <ion-text>{{workoutData[0]}} lbs</ion-text>
+          <ion-text>{{workoutData[i]}} lbs</ion-text>
         </ion-col>
 
         <ion-col class="right">
           <ion-button>
             <ion-icon name="chevron-forward-outline"></ion-icon>
-          </ion-button>
-        </ion-col>
-      </ion-buttons>
-    </ion-row>
-  </ion-grid>
-
-  <ion-grid style="border-bottom: 2px solid grey">
-    <ion-row>
-      <ion-buttons>
-        <ion-col class="left-table-text" size="auto">
-          <ion-text>{{workoutDates[1]}}</ion-text>
-        </ion-col>
-
-        <ion-col class="weight-text">
-          <ion-text>{{workoutData[1]}} lbs</ion-text>
-        </ion-col>
-
-        <ion-col class="right">
-          <ion-button>
-            <ion-icon name="chevron-forward-outline" float-right></ion-icon>
           </ion-button>
         </ion-col>
       </ion-buttons>
