--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
@@ -14,7 +14,7 @@
 
   <ion-grid style="border-bottom: 2px solid grey">
     <ion-row>
-    <ion-buttons color="#1E1E1E" lines="none">
+    <ion-buttons color="#1E1E1E" lines="none" class="date-selection">
       <ion-col>
         <ion-button (click)="displayPreviousWeek()">
         <ion-icon slot="start" name="chevron-back-outline" size="large"></ion-icon>
@@ -22,7 +22,7 @@
       </ion-col>
 
       <ion-col>
-        <ion-text>{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
+        <ion-text text-align="center">{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
       </ion-col>
 
       <ion-col>
@@ -47,6 +47,39 @@
             </div>
           </ion-select>
         </ion-item>
+    </ion-row>
+  </ion-grid>
+
+  <ion-grid>
+    <ion-row class="table-title-color">
+        <ion-col class="left-table-text">
+          <ion-text>This Week</ion-text>
+        </ion-col>
+
+        <ion-col class="right-table-text">
+          <ion-text>Total Weight</ion-text>
+        </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!-- add ngfor loop here to generate data -->
+  <ion-grid style="border-bottom: 2px solid grey">
+    <ion-row *ngFor="let row of workoutDates; let i = index">
+      <ion-buttons>
+        <ion-col class="left-table-text" size="auto">
+          <ion-text>{{workoutDates[i]}}</ion-text>
+        </ion-col>
+
+        <ion-col class="weight-text">
+          <ion-text>{{workoutData[i]}} lbs</ion-text>
+        </ion-col>
+
+        <ion-col class="right">
+          <ion-button>
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-buttons>
     </ion-row>
   </ion-grid>
 
