--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.scss
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.scss
@@ -15,6 +15,10 @@ ion-button.Delete{
     --color: #833535;
     // width: 50px;
 }
+ion-list {
+    --background: #606060 !important;
+    background: #606060 !important;
+}
 
 ion-button.Add{
     --color: #ffffff;
