--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -39,7 +39,7 @@
                 <ion-item>
                   <ion-icon size="small" name="timer-outline"></ion-icon>
                   <ion-input #duration [(ngModel)]="currentSession.duration" [clearOnEdit]="true" type="number"
-                    placeholder="Mins"></ion-input>
+                    placeholder="Mins"  inputmode="numeric"></ion-input>
                 </ion-item>
               </ion-row>
             </ion-col>
