--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -1,6 +1,9 @@
-<ion-toolbar>
-  <ion-title>Workouts Dashboard</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Workouts Dashboard</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 
 <ion-content>
 
