--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
@@ -1,8 +1,8 @@
 <div class="background">
-  <ion-button class="Delete" (click)="deleteActivity()" fill="clear" style="float: right;" >
+  <ion-button class="Delete" (click)="deleteActivity()" fill="clear" style="float: right;">
     <ion-icon name="close-circle-outline"></ion-icon>
   </ion-button>
-  <ion-grid >
+  <ion-grid>
     <ion-row>
       <ion-col size="9">
         <ion-input [clearOnEdit]="true" placeholder="Excercise" [(ngModel)]="activity.name" (ionChange)="updateName()">
@@ -10,15 +10,18 @@
       </ion-col>
       <ion-col size="2">
         <ion-row>
-          <app-muscle-svg (muscleSelected)="addMuscles($event)" [canSelect]="false" [muscles]="activity.muscleGroups" ></app-muscle-svg>
+          <app-muscle-svg (muscleSelected)="addMuscles($event)" [canSelect]="false"
+            [muscles]="activity.muscleGroups"></app-muscle-svg>
         </ion-row>
       </ion-col>
     </ion-row>
 
-  
+    <ion-list>
       <app-exercise-set *ngFor="let set of activity.sets; index as i;" [activityIndex]="activityIndex" [set]="set"
-        [setCount]="i+1">
-      </app-exercise-set>
+      [setCount]="i+1">
+    </app-exercise-set>
+    </ion-list>
+
 
     <ion-row>
       <ion-col>
@@ -27,14 +30,6 @@
           Add Set
         </ion-button>
       </ion-col>
-      <ion-col></ion-col>
-      <ion-col>
-       
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      
-     
     </ion-row>
   </ion-grid>
 </div>
