Create models for Weight on user.

--- a/backend/webapp/templates/webapp/activity.html
+++ b/backend/webapp/templates/webapp/activity.html
@@ -127,5 +127,5 @@ i.fas:hover {
 {% block scripts %}
 <script src="{% static 'webapp/js/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'webapp/js/dataTables.bootstrap4.min.js' %}"></script>
-<script src="{% static 'webapp/js/datatable.js' %}"></script>
+<script src="{% static 'webapp/js/activity.js' %}"></script>
 {% endblock %}
