--- a/backend/webapp/templates/webapp/base.html
+++ b/backend/webapp/templates/webapp/base.html
@@ -82,7 +82,7 @@
 
             <!-- Nav Item - Weight -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="{% url 'weight' %}">
                     <i class="fas fa-weight"></i>
                     <span>Weight</span></a>
             </li>
